syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.benchmark.service.grpc";
option java_outer_classname = "PayloadProto";

import "google/protobuf/timestamp.proto";

service PayloadService {
  rpc SendPayload (InputPayload) returns (PayloadResponse);
}

message InputPayload {
  string id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  google.protobuf.Timestamp created_date = 5;
  google.protobuf.Timestamp updated_date = 6;
  google.protobuf.Timestamp birth_date = 7;
  // Add more fields as needed
}

message PayloadResponse {
  string status = 1;
  string message = 2;
}
